--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
   "license": "MIT",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.62",
+    "@types/node": "^15.6.0",
     "serverless": "^2.2.0",
     "serverless-offline": "^6.9.0",
     "serverless-webpack": "^5.3.5",
     "ts-loader": "^8.0.4",
     "typescript": "^4.0.3",
     "webpack": "^4.44.2"
+  },
+  "dependencies": {
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.2",
+    "typeorm": "^0.2.32"
   }
 }
