--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
+    "ts-node": "^10.0.0",
     "typeorm": "^0.2.32"
   }
 }
